syntax = "proto3";
// ---------------------------------------------------------策略拖管平台 BEGIN -----------------------------------------------------------
// 策略管理参数结构
message CMbl_GospStrategyManagerParam
{
    string key  = 1;
    string value    = 2;
}

/*
* @funid 44001
* @descript 策略管理参数管理
*/
message CMbl_GospStrategyManagerParamManager
{
    // 管理权限控制
    // （系统管理员（系统管理员（包括8888系统管理员和系统管理员角色用户）：可管理（增删改查）所有机构）

    string cmd = 1;                                                // 管理类型       CHAR(1)                           "A" 增加 "U" 修改 "D" 删除
    string orgid = 2;                                              // 机构ID         NVARCHAR2(32)      必填, 当设置系统级别参数时填0, 当设置机构界别参数时填具体机构
    repeated CMbl_GospStrategyManagerParam manager_param_list = 3; // 管理参数键值对数据
};

/*
* @funid 44002
* @descript 策略管理参数查询, 查询结果集，参加表结构字段说明。
*/
message CMbl_GospStrategyManagerParamyQuery
{
    // 查询权限控制
    // 1.（系统管理员（系统管理员（包括8888系统管理员和系统管理员角色用户）：可管理（增删改查）所有机构）
    //    拥有“特殊权限-22可查看所有机构”，则有权限的机构为所有机构
    // 2. 其他操作员, 只能查询本机构的参数
    string orgid = 1;                                              // 机构ID         NVARCHAR2(32)
};

/*
* @funid 44003
* @descript 策略镜像管理
*/
message CMbl_GospStrategyImagesManager
{
    // 管理权限控制
    // （系统管理员（系统管理员（包括8888系统管理员和系统管理员角色用户）：可管理（增删改查）所有机构）

    string cmd = 1;                                                // 管理类型       CHAR(1)                           "A" 增加 "U" 修改 "D" 删除
    CProto_gosp_strategy_images gosp_strategy_images = 2;          // 策略镜像
};

/*
* @funid 44004
* @descript 策略DOCKER节点管理
*/
message CMbl_GospDockerNodeManager
{
    // 管理权限控制
    // （系统管理员（系统管理员（包括8888系统管理员和系统管理员角色用户）：可管理（增删改查）所有机构）

    string cmd = 1;                                                // 管理类型       CHAR(1)                           "A" 增加 "U" 修改 "D" 删除
    CProto_gosp_docker_node gosp_docker_node = 2;                  // 策略镜像
};

/*
* @funid 44005
* @descript 策略管理
*/
message CMbl_GospStrategyManager
{
    string cmd = 1;                                                // 管理类型        CHAR(1)                           "A" 创建 "U" 修改 "D" 删除
    int64 strategy_sno = 2;                                        // 策略序号        NUMBER(16)      修改、删除必填
    string strategy_name = 3;                                      // 策略名称        NVARCHAR2(255)  增加、修改时必填
    string strategy_image = 4;                                     // 策略镜像        NVARCHAR2(255)  例如docker.gf.com.cn/pb/gosp/release:1.0.0
    string strategy_local_dir = 5;                                 // 策略本地根目录
};

// 策略查询, 查询结果集，参加表结构字段说明。
message CMbl_GospStrategyQuery
{
    // strategy_sno为0时, 查询操作用户属于机构的全部策略, 当strategy_sno不为0时, 查询指定strategy_sno的策略
    int64 strategy_sno = 1;                                        // 策略序号       NUMBER(16)      可填
};

// 策略文件管理
message CMbl_GospStrategyFileManager
{
    // 管理类型
    // 1 上传文件
    // 2 下载文件
    // 3 删除文件
    string cmd = 1;                                                // 管理类型        CHAR(1)
    // 操作状态
    // 1-成功, 当上传成功, 删除成功时会记录/更新策略文件信息
    // 2-失败
    // 3-处理中
    string op_status = 2;                                          // 操作状态       CHAR(1)
    int64 strategy_sno = 3;                                        // 策略序号       NUMBER(16)
    string file_name = 4;                                          // 文件名称       NVARCHAR2(512)
    string auto_upload = 5;                                        // 自动上传       CHAR(1)         0-否 1-是
    string auto_download = 6;                                      // 自动下载       CHAR(1)         0-否 1-是
    int32 file_size = 7;                                           // 文件大小KB     INTEGER
    string file_md5 = 8;                                           // 文件md5        NVARCHAR2(128)
};

// 策略文件查询
message CMbl_GospStrategyFileQuery
{
    int64 strategy_sno = 1;                                        // 策略序号       NUMBER(16)      必填
    string file_name = 2;                                          // 文件名称       NVARCHAR2(512)  可填, 填写时支持该文件的日志
};

// 策略文件日志查询
message CMbl_GospStrategyFileLogQuery
{
    // 分页查询设置
    int32 current_page = 1;                                        // 当前请求页, 如需分页则从1开始
    int32 page_size = 2;                                           // 页面大小, -1 不分页, 0 返回0条记录, >0 返回0-page_size条记录

    int64 strategy_sno = 3;                                        // 策略序号       NUMBER(16)      必填
    string file_name = 4;                                          // 文件名称       NVARCHAR2(512)  可填, 填写时支持该文件的日志
};


// 策略实例管理, 终端->管理平台
message CMbl_GospInstanceManager
{
    // 管理类型
    // 1 创建, 需求创建和运行一步操作, 但是实际要分两步, 先创建后有实例编号后才能上传实例配置文件
    // 2 运行
    // 3 暂停
    // 4 恢复
    // 5 停止
    // 6 删除
    // 7 修改策略配置文件
    string cmd = 1;                                                // 管理类型
    int64 strategy_sno = 2;                                        // 策略序号       NUMBER(16)      必填
    int64 instance_sno = 3;                                        // 实例序号       NUMBER(16)      创建时不填, 其余必填
    string instance_name = 4;                                      // 实例名称       NVARCHAR2(512)  创建时必填
    string instance_mode = 5;                                      // 实例模式       CHAR(1)         创建时必填  1-Linux平台动态链接库 2-Linux平台可执行文件
    string cfg_file_name = 6;                                      // 文件名称       NVARCHAR2(512)  启动, 修改如果有选策略文件时填写, 多个则竖线(|)分隔
    string remark = 7;                                             // 备注           NVARCHAR2(512)  可填
};

// 策略实例查询
message CMbl_GospInstanceQuery
{
    int64 strategy_sno = 1;                                        // 策略序号       NUMBER(16)      必填
    int64 instance_sno = 2;                                        // 实例序号       NUMBER(16)      如果只查某策略实例时填写
};

// 策略实例操作日志查询
message CMbl_GospInstanceOpLogQuery
{
    int64 instance_sno = 1;                                        // 实例序号       NUMBER(16)      必填
};

// 策略实例文件管理
message CMbl_GospInstanceFileManager
{
    // 管理类型
    // 1 上传文件
    // 2 下载文件
    // 3 删除文件
    string cmd = 1;                                                // 管理类型        CHAR(1)
    // 操作状态
    // 1-成功, 当上传成功, 删除成功时会记录/更新策略文件信息
    // 2-失败
    // 3-处理中
    string op_status = 2;                                          // 操作状态       CHAR(1)
    int64 instance_sno = 3;                                        // 策略序号       NUMBER(16)
    string file_name = 4;                                          // 文件名称       NVARCHAR2(512)
    int32 file_size = 5;                                           // 文件大小KB     INTEGER
    string file_md5 = 6;                                           // 文件md5        NVARCHAR2(128)
};

// 策略实例文件查询
message CMbl_GospInstanceFileQuery
{
    int64 instance_sno = 1;                                        // 策略序号       NUMBER(16)      必填
    string file_name = 2;                                          // 文件名称       NVARCHAR2(512)  可填, 填写时支持该文件的日志
};

// 策略实例文件日志查询
message CMbl_GospInstanceFileLogQuery
{
    // 分页查询设置
    int32 current_page = 1;                                        // 当前请求页, 如需分页则从1开始
    int32 page_size = 2;                                           // 页面大小, -1 不分页, 0 返回0条记录, >0 返回0-page_size条记录

    int64 instance_sno = 3;                                        // 策略序号       NUMBER(16)      必填
    string file_name = 4;                                          // 文件名称       NVARCHAR2(512)  可填, 填写时支持该文件的日志
};

// ---------------------------------------------------------策略拖管平台 END -----------------------------------------------------------
